--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "npm:sass@^1.80.3",
+    "sass": "^1.80.3",
+    "sass-loader": "^16.0.2"
   },
   "eslintConfig": {
     "root": true,
