--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -19,9 +20,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "npm:sass@^1.80.3",
     "sass": "^1.80.3",
-    "sass-loader": "^16.0.2"
+    "sass-loader": "^13.0.0"
   },
   "eslintConfig": {
     "root": true,
